--- a/assets/root.css
+++ b/assets/root.css
@@ -1,175 +1,214 @@
 .ui.vertical.inverted.sidebar.menu {
-        padding-top: 3em;
-    }
-    
-    .hidden.menu {
-        display: none;
-    }
-    
-    .masthead.segment {
-        min-height: 700px;
-        padding: 1em 0em;
-    }
-    
-    .masthead .logo.item img {
-        margin-right: 1em;
-    }
-    
-    .masthead .ui.menu .ui.button {
-        margin-left: 0.5em;
-    }
-    
-    .masthead h1.ui.header {
-        margin-top: 1em;
-        margin-bottom: 0em;
-        font-size: 4em;
-        font-weight: bold;
-        /*color: #1D2951;*/
-        color: #D8D8D8;
-        /*text-shadow: 1px 1px rgba(255,255,255,0.5);*/
-        text-shadow: 2px 2px #1D2951;
-    }
-    
-    .masthead h2 {
-        font-size: 1.7em;
-        font-weight: normal;
-        margin-bottom: 30px;
-    }
-    
-    .ui.vertical.stripe {
-        padding: 4em 0em;
-    }
-    
-    .ui.vertical.stripe h3 {
-        font-size: 2em;
-    }
-    
-    .ui.vertical.stripe .button + h3,
-    .ui.vertical.stripe p + h3 {
-        margin-top: 3em;
-    }
-    
-    .ui.vertical.stripe .floated.image {
-        clear: both;
-    }
-    
-    .ui.vertical.stripe p {
-        font-size: 1.33em;
-    }
-    
-    .ui.vertical.stripe .horizontal.divider {
-        margin: 3em 0em;
-    }
-    
-    .quote.stripe.segment {
-        padding: 0em;
-    }
-    
-    .quote.stripe.segment .grid .column {
-        padding-top: 5em;
-        padding-bottom: 5em;
-    }
-    
-    .footer.segment {
-        padding: 5em 0em;
-    }
-    
-    .secondary.pointing.menu .toc.item {
-        display: none;
-    }
-    
-    .fixed.menu .container .toc.item {
-        display: none;
-    }
-    
-    @media only screen and (max-width: 700px) {
-        .ui.fixed.menu {
-            display: none !important;
+  padding-top: 3em;
+}
+
+.hidden.menu {
+  display: none;
+}
+
+.masthead.segment {
+  min-height: 700px;
+  padding: 1em 0em;
+}
+
+.masthead .logo.item img {
+  margin-right: 1em;
+}
+
+.masthead .ui.menu .ui.button {
+  margin-left: 0.5em;
+}
+
+.masthead h1.ui.header {
+  margin-top: 1em;
+  margin-bottom: 0em;
+  font-size: 4em;
+  font-weight: bold;
+  /*color: #1D2951;*/
+  color: #D8D8D8;
+  /*text-shadow: 1px 1px rgba(255,255,255,0.5);*/
+  text-shadow: 2px 2px #1D2951;
+}
+
+.masthead h2 {
+  font-size: 1.7em;
+  font-weight: normal;
+  margin-bottom: 30px;
+}
+
+.ui.vertical.stripe {
+  padding: 4em 0em;
+}
+
+.ui.vertical.stripe h3 {
+  font-size: 2em;
+}
+
+.ui.vertical.stripe .button+h3,
+.ui.vertical.stripe p+h3 {
+  margin-top: 3em;
+}
+
+.ui.vertical.stripe .floated.image {
+  clear: both;
+}
+
+.ui.vertical.stripe p {
+  font-size: 1.33em;
+}
+
+.ui.vertical.stripe .horizontal.divider {
+  margin: 3em 0em;
+}
+
+.quote.stripe.segment {
+  padding: 0em;
+}
+
+.quote.stripe.segment .grid .column {
+  padding-top: 5em;
+  padding-bottom: 5em;
+}
+
+.ui.cards>.card,
+.ui.card {
+  background: rgba(255, 255, 255, 0.2);
+  /*color: #fff;*/
+  box-shadow: 0px 1px 1px 0px #2D2D2D, 0px 0px 0px 1px #2D2D2D;
+}
+
+
+/*    .ui.cards > .card > .content > .header, .ui.card > .content > .header {
+            color: #fff;
+        }*/
+
+.ui.cards>.card>.content,
+.ui.card>.content {
+  background: #fff;
+}
+
+
+/*        .ui.cards > .card > .content a:not(.ui), .ui.card > .content a:not(.ui) {
+            color: rgba(255,255,255,0.7);
+        }*/
+
+
+/*        code {
+            color: #EAA221;
         }
-        .secondary.pointing.menu .item,
-        .secondary.pointing.menu .menu {
-            display: none;
-        }
-        .fixed.inverted.menu .item,
-        .fixed.inverted.menu .menu {
-            display: none;
-        }
-        .secondary.pointing.menu .toc.item {
-            display: block;
-        }
-        .fixed.menu .container .toc.item {
-            display: block;
-        }
-        .masthead.segment {
-            min-height: 350px;
-        }
-        .masthead h1.ui.header {
-            font-size: 2em;
-            margin-top: 1.5em;
-        }
-        .masthead h2 {
-            margin-top: 0.5em;
-            font-size: 1.5em;
-        }
-    }
-    
-    .ui.inverted.vertical.masthead.center.aligned.segment {
-        background-color: #000;
-        background-image: url(../assets/sunrise.jpg);
-        background-position: center center, center top;
-        background-repeat: no-repeat;
-        height: auto;
-        width: auto;
-        background-size:contain;
-    }
-    
-    .ui.secondary.inverted.pointing.menu {
-        border: none;
-    }
-    /*  a.toc.item {
+        code:hover {
+           color: #A50B5E;
+        }*/
+
+
+/*        .ui.cards > .card > div > p {
+            background: rgba(0,0,0,0.3);
+        }*/
+
+.footer.segment {
+  padding: 5em 0em;
+}
+
+.secondary.pointing.menu .toc.item {
+  display: none;
+}
+
+.fixed.menu .container .toc.item {
+  display: none;
+}
+
+@media only screen and (max-width: 700px) {
+  .ui.fixed.menu {
+    display: none !important;
+  }
+  .secondary.pointing.menu .item,
+  .secondary.pointing.menu .menu {
+    display: none;
+  }
+  .fixed.inverted.menu .item,
+  .fixed.inverted.menu .menu {
+    display: none;
+  }
+  .secondary.pointing.menu .toc.item {
+    display: block;
+  }
+  .fixed.menu .container .toc.item {
+    display: block;
+  }
+  .masthead.segment {
+    min-height: 350px;
+  }
+  .masthead h1.ui.header {
+    font-size: 2em;
+    margin-top: 1.5em;
+  }
+  .masthead h2 {
+    margin-top: 0.5em;
+    font-size: 1.5em;
+  }
+}
+
+.ui.inverted.vertical.masthead.center.aligned.segment {
+  background-color: #000;
+  background-image: url(../assets/sunrise.jpg);
+  background-position: center top, center top;
+  background-repeat: no-repeat;
+  height: auto;
+  width: auto;
+  background-size: contain;
+  background-attachment: fixed;
+}
+
+.ui.secondary.inverted.pointing.menu {
+  border: none;
+}
+
+
+/*  a.toc.item {
       border-style: solid;
       border-width: 5px;
     }*/
-    
-    .ui.vertical.stripe.quote.inverted.segment {
-        background: #1D2951;
-    }
-    
-    h3.ui.header.qrl-blue {
-        color: #1D2951;
-    }
-    
-    a {
-        color: #EAA221;
-    }
-    
-    a:hover {
-        color: #A50B5E;
-    }
-    
-    h3.ui.header.qrl-raspberry {
-        color: #A50B5E;
-    }
-    
-    h3.ui.header.qrl-marmalade {
-        color: #EAA221;
-    }
-    
-    h3.ui.header.qrl-peppermint {
-        color: #339D6C;
-    }
-    
-    h4.ui.horizontal.header.divider a {
-        color: #1D2951;
-    }
-    
-    div#header.ui.text.container h6 {
-        margin-top: 0px !important;
-    }
-    
-    div#header.ui.text.container h2 {
-        margin-bottom: 0px !important;
-    }
-    .faq-content {
-        margin-top: -20px;
-    }
+
+.ui.vertical.stripe.quote.inverted.segment {
+  background: #1D2951;
+}
+
+h3.ui.header.qrl-blue {
+  color: #1D2951;
+}
+
+a {
+  color: #EAA221;
+}
+
+a:hover {
+  color: #A50B5E;
+}
+
+h3.ui.header.qrl-raspberry {
+  color: #A50B5E;
+}
+
+h3.ui.header.qrl-marmalade {
+  color: #EAA221;
+}
+
+h3.ui.header.qrl-peppermint {
+  color: #339D6C;
+}
+
+h4.ui.horizontal.header.divider a {
+  color: #1D2951;
+}
+
+div#header.ui.text.container h6 {
+  margin-top: 0px !important;
+}
+
+div#header.ui.text.container h2 {
+  margin-bottom: 0px !important;
+}
+
+.faq-content {
+  margin-top: -20px;
+}
