--- a/assets/root.css
+++ b/assets/root.css
@@ -9,6 +9,7 @@
 .masthead.segment {
   min-height: 700px;
   padding: 1em 0em;
+  margin-bottom: 50px;
 }
 
 .masthead .logo.item img {
@@ -211,4 +212,72 @@ div#header.ui.text.container h2 {
 
 .faq-content {
   margin-top: -20px;
+}
+.section-header, .steps-header, .steps-name {
+  color: #EAA221;
+  font-weight: 400;
+  font-size: 1.4em;
+}
+
+.steps-header {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.steps-timeline {
+  outline: 1px dashed rgba(255, 0, 0, 0);
+  border-left: 2px solid #EAA221;
+  margin-left: 25px;
+}
+.steps-timeline:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.steps-one,
+.steps-two,
+.steps-three {
+  outline: 1px dashed rgba(0, 128, 0, 0);
+  margin-left: -25px;
+}
+
+.steps-one,
+.steps-two {
+  padding-bottom: 40px;
+}
+
+.steps-three {
+  margin-bottom: -100%;
+}
+
+.steps-img {
+  display: block;
+  margin: auto;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  float: left;
+  margin-right: 20px;
+}
+
+.steps-name,
+.steps-description,
+.steps-date {
+  margin: 0;
+}
+
+.steps-description, .steps-date {
+  overflow: hidden;
+}
+
+.steps-date {
+  font-size: 0.8em;
+  color: #B2B2B2;
+  margin-left: 72px;
+  margin-top: 4px;
+}
+h1.post-title {
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
