Last 6 Medium blog posts outlined on Homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,22 @@ layout: default
                     </form>
                 </div>
             </div>
-            <div class="ui centered grid">
+
                 <div class="ten columns">
                     <h1>&nbsp;</h1></div>
+                                <!-- <div class="ui cards blog"> -->
+
+            
+                <div style="height:50px;"></div>
+
+                    <div class="ui container">
+                      <div class="ui centered cards blog" id="jsonContent"></div>
+                    
+                    <!-- /#blogContent-->
+                    <!-- <div class="text-center"><a class="btn btn-dark" id="loadBlogPosts" href="//medium.jasonmdesign.com">View All<span class="fa fa-angle-double-right"></span></a></div> -->
+            
+                  <!-- /.container-->
+        
+                <!-- Blog-->
+            </div>
             </div>
