--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{{ "/assets/root.css" | relative_url }}">
     <script src="{{ "/assets/jquery/dist/jquery.min.js" | relative_url }}"></script>
     <script src="{{ "/assets/semantic/dist/semantic.js" | relative_url }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.min.js"></script>
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
       <script src="{{ "/assets/root.js" | relative_url }}"></script>
   {% if jekyll.environment == 'production' and site.google_analytics %}
