--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
   <main class="page-content" aria-label="Content">
     <div class="pusher">
       {% if page.active == "home" %}
-        <div class="ui inverted vertical masthead center aligned segment" id="section-1">
+        <!-- <div class="ui inverted vertical masthead center aligned segment" id="section-1"> -->
+          <div class="ui inverted vertical masthead center aligned segment">
       {% else %}
       <div class="ui inverted vertical masthead center aligned segment">
       {% endif %}
