Migrate to Github pages

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="ui centered grid" style="padding-top: 30px;">
   <div class="ten columns">
-    <div class="ui text container" id="header" style="margin-top: 40px"><img src="assets/vertical-logo.svg" width="80%" style="max-height: 300px"></div>
+    <div class="ui text container" id="header" style="margin-top: 40px"><img src="/assets/vertical-logo.svg" width="80%" style="max-height: 300px"></div>
   </div>
 </div>
 <div class="ui centered grid" style="margin-top: 40px">
