--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
 <div class="ui vertical inverted sidebar menu">
   <a class="item" href="/">Home</a>
   <a class="item" href="https://discord.gg/BheKAZb"><i class="comment outline icon"></i> Discord chat</a>
-  <a class="item" href="team.html"><i class="users icon"></i> Team</a>
-  <a class="item" href="roadmap.html"><i class="road icon"></i> Roadmap</a>
+  <a class="item" href="/team"><i class="users icon"></i> Team</a>
+  <a class="item" href="/roadmap"><i class="road icon"></i> Roadmap</a>
   <a class="item" href="/faq"><i class="question icon"></i> FAQ</a>
   <a class="item" href="https://medium.com/the-quantum-resistant-ledger" target="_blank"><i class="medium icon"></i> Blog</a>
   <a class="item" href="https://twitter.com/qrledger" target="_blank"><i class="twitter icon"></i> Twitter</a>
