Add community contributed Whitepaper translations

--- a/_includes/mainmenu.html
+++ b/_includes/mainmenu.html
@@ -28,7 +28,35 @@
             <a class="item" href="https://github.com/theQRL"><i class="github icon"></i> Github</a>
 
               <div class="ui dropdown item"><i class="file text outline icon"></i> White paper <i class="dropdown icon"></i>
-                <div class="menu"><a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper.pdf" target="_blank"><i class="gb flag"></i> English</a> <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_Whitepaper_Japanese.pdf" target="_blank"><i class="japan flag"></i> Japanese</a></div>
+                <div class="menu">
+                  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper.pdf" target="_blank">
+                    <i class="gb flag"></i> English
+                  </a>
+                  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_Whitepaper_Japanese.pdf" target="_blank">
+                    <i class="japan flag"></i> Japanese
+                  </a>
+                  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_Whitepaper_Russian.pdf" target="_blank">
+                    <i class="russia flag"></i> Russian
+                  </a>
+                  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper_Translated_Chinese_Only.pdf" target="_blank">
+                    <i class="china flag"></i> Chinese
+                  </a>
+                  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper_german_translation.pdf" target="_blank">
+                    <i class="germany flag"></i> German
+                  </a>
+                  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_Whitepaper_french_translation.pdf" target="_blank">
+                    <i class="france flag"></i> French
+                  </a>
+                  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper_TR_Updated_1.pdf" target="_blank">
+                    <i class="turkey flag"></i> Turkish
+                  </a>
+                  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper_spanish_translation.pdf" target="_blank">
+                    <i class="spain flag"></i> Spanish
+                  </a>
+                  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_Whitepaper_vietnamese_translation.pdf" target="_blank">
+                    <i class="vietnam flag"></i> Vietnamese
+                  </a>
+                </div>
               </div>
 
           </div>
