--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,24 @@
   <a class="item" href="https://medium.com/the-quantum-resistant-ledger" target="_blank"><i class="medium icon"></i> Blog</a>
   <a class="item" href="https://twitter.com/qrledger" target="_blank"><i class="twitter icon"></i> Twitter</a>
   <a class="item" href="https://reddit.com/r/qrl" target="_blank"><i class="reddit alien icon"></i> Reddit</a>
-  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper.pdf"><i class="gb flag"></i> White paper</a>
-  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_Whitepaper_Japanese.pdf" target="_blank"><i class="japan flag"></i> White paper</a>
+  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper.pdf"><i class="gb flag"></i> White paper [English]</a>
+  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_Whitepaper_Japanese.pdf" target="_blank"><i class="japan flag"></i> White paper [Japanese]</a>
+  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_Whitepaper_Russian.pdf" target="_blank"><i class="russia flag"></i> White paper [Russian]</a>
+  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper_Translated_Chinese_Only.pdf" target="_blank"><i class="china flag"></i> White paper [Chinese]</a>
+  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper_german_translation.pdf" target="_blank">
+    <i class="germany flag"></i> White paper [German]
+  </a>
+  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_Whitepaper_french_translation.pdf" target="_blank">
+    <i class="france flag"></i> White paper [French]
+  </a>
+  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper_TR_Updated_1.pdf" target="_blank">
+    <i class="turkey flag"></i> White paper [Turkish]
+  </a>
+  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_whitepaper_spanish_translation.pdf" target="_blank">
+    <i class="spain flag"></i> White paper [Spanish]
+  </a>
+  <a class="item" href="https://github.com/theQRL/Whitepaper/blob/master/QRL_Whitepaper_vietnamese_translation.pdf" target="_blank">
+    <i class="vietnam flag"></i> White paper [Vietnamese]
+  </a>
   <a class="item" href="https://github.com/theQRL"><i class="github icon" aria-hidden="true"></i> Github</a>
 </div>
