FAQ Style + Front page
- Fixed dropdown so it floats right
- Fixed background leaving space
- Added intro
- Made FAQ page legible

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,6 +11,11 @@ layout: default
     <button class="ui large red button" onclick="$('#mcform').show()">Register for updates &raquo;</button>
   </div>
 </div>
+<div class="ui centered grid intro" style="margin-top: 40px">
+  <div class="ten columns">
+    <p>Quantum Resistant Ledger (QRL) will be a first of its kind, future-proof post-quantum value store and decentralized communication layer which tackles the threat Quantum Computing will pose to cryptocurrencies.</p>
+  </div>
+</div>
 <div class="ui centered grid" style="display: none; margin-top: 40px" id="mcform">
   <div id="mc_embed_signup">
     <form action="//theQRL.us15.list-manage.com/subscribe/post?u=320d425bdf5f1ebac6339bb6b&amp;id=49498f9dd0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="ui form validate" target="_blank" novalidate>
