--- a/assets/root.css
+++ b/assets/root.css
@@ -1,9 +1,9 @@
 html {
-   height: 100% !important;
+   height: 100%;
 }
 
 body {
-   min-height: 100% !important;
+   min-height: 100%;
 }
 .ui.vertical.inverted.sidebar.menu {
   padding-top: 3em;
