Add video to front of website.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,7 @@ layout: default
 </div>
 <div class="ui centered grid intro" style="margin-top: 40px">
   <div class="ten columns">
+    <iframe src="https://www.youtube.com/embed/Ck-sHNNYFlQ?rel=0&amp;modestbranding=0&amp;showinfo=0" allowfullscreen="" width="560" height="315" frameborder="0"></iframe>
     <p>Quantum Resistant Ledger (QRL) will be a first of its kind, future-proof post-quantum value store and decentralized communication layer which tackles the threat Quantum Computing will pose to cryptocurrencies.</p>
   </div>
 </div>
