--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,10 +12,12 @@ layout: default
   </div>
 </div>
 <div class="ui centered grid intro" style="margin-top: 40px">
-  <div class="ten columns">
-    <iframe src="https://www.youtube.com/embed/Ck-sHNNYFlQ?rel=0&amp;modestbranding=0&amp;showinfo=0" allowfullscreen="" width="560" height="315" frameborder="0"></iframe>
-    <p>The Quantum Resistant Ledger (QRL) will be a first of its kind, future-proof post-quantum value store and decentralized communication layer which tackles the threat Quantum Computing will pose to cryptocurrencies.</p>
+<div class="row">
+    <iframe src="https://www.youtube.com/embed/Ck-sHNNYFlQ?rel=0&amp;modestbranding=0&amp;showinfo=0" allowfullscreen="" frameborder="0"></iframe>
   </div>
+  <div class="row">
+    <p>The Quantum Resistant Ledger (QRL) will be a first of its kind, future-proof post-quantum value store and decentralized communication layer which tackles the threat Quantum Computing will pose to cryptocurrencies.</p>
+</div>
 </div>
 <div class="ui centered grid" style="display: none; margin-top: 40px" id="mcform">
   <div id="mc_embed_signup">
