--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@ layout: default
 
 <div class="ui centered grid intro" style="margin-top: 40px">
 <div class="row">
-    <iframe src="https://www.youtube.com/embed/Ck-sHNNYFlQ?rel=0&amp;modestbranding=0&amp;showinfo=0" allowfullscreen="" frameborder="0"></iframe>
+    <iframe src="https://www.youtube.com/embed/V8IxLDxMEb8?rel=0&amp;modestbranding=0&amp;showinfo=0" allowfullscreen="" frameborder="0"></iframe>
   </div>
   <div class="row">
     <p>The Quantum Resistant Ledger (QRL) will be a first of its kind, future-proof post-quantum value store and decentralized communication layer which tackles the threat Quantum Computing will pose to cryptocurrencies.</p>
